[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/image/Bomb.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bomb.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[node name="Bomb" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GoOffTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ColliTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GoOffTimer" to="." method="_on_GoOffTimer_timeout"]
[connection signal="timeout" from="ColliTimer" to="." method="_on_ColliTimer_timeout"]
